src/app/shared/components/print-dialog/print-dialog.component.scss
@use '/src/mixins' as mixins;
@import '/src/colors';
@import '/src/fonts';

.print-dialog {
  font-family: $font-system;
  display: flex;
  gap: 12px;
  height: 100%;
  width: 100%;
  background: $background-primary;
  padding: 24px;
  box-sizing: border-box;

  overflow: hidden;
  user-select: none;

  &__container-title {
    position: absolute;
    top: -15px;
    left: 18px;
    background: white;
    font-size: 14px;
    font-weight: bold;
    padding: 4px 8px;
  }

  &__title {
    margin-top: 0;
    margin-left: 12px;
    color: $font-color-primary;
    font-size: 18px;
    font-weight: bold;
  }

  &__path {
    max-width: 244px;
    font-size: 14px;

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    color: $font-color-secondary;
  }

  &__section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 4px 0 2px 14px
  }

  &__config-section {
    display: flex;
    flex-direction: column;
    width: 50%;
    overflow: hidden;
  }

  &__scroll {
    @include mixins.scrollable;
    height: 100%;
    padding: 16px 0;

    content-container:not(:last-child) {
      margin-bottom: 32px;
    }
  }

  &__divider {
    margin: 0 12px;
    border-right-color: transparent;
  }

  &__preview-section {
    width: 50%;
  }

  &__preview {
    width: 100%;
    height: 100%;

    box-sizing: border-box;
  }

  &__content {
    flex-grow: 1;
  }

  &__buttons {
    display: flex;
    gap: 8px;
    justify-content: flex-end;
    margin-top: auto;
    padding: 24px 10px 0;

    .button {
      min-width: 128px;
    }
  }


  &__toggle.mat-checked {
    ::ng-deep .mat-slide-toggle-bar {
      background-color: #ff9069;
    }
    ::ng-deep .mat-slide-toggle-thumb {
      background-color: var(--primary-color);
    }
  }

  .mat-button-toggle-checked {
    background: var(--primary-color);
    line-height: initial;
    color: white;
  }

  .mat-button-toggle-label-content {
    line-height: 36px;
    font-size: 14px;
    font-family: $font-system;
  }

  .mat-button-toggle-button {
    width: 104px;
  }

  .button {
    width: 92px;
  
    border-radius: 12px;
    font-family: $font-system;
    font-weight: normal;
    color: $font-color-primary;
  }
  
  .button__submit {
    background-color: var(--primary-color);
    border-color: transparent;
    color: #fff;
  }
  
  .button__cancel {
    background-color: transparent;
    border-color: transparent;
    color: $font-color-primary;
  
    &:hover {
      background: $background-button-hover;
    }
  }
}

.columns {
  width: 100%;
  max-width: 100%;
  min-height: 60px;
  display: block;
  border-radius: 8px;
  overflow: hidden;


  .print-dialog__column-container:last-child {
    .column__divider {
      display: none;
    }
  }
}

.column {
  font-family: $font-system;
  padding: 14px 12px 14px 8px;
  display: flex;
  align-items: center;
  gap: 8px;
  box-sizing: border-box;
  background: transparent;
  color: $font-color-primary;
  font-size: 14px;

  &__name {
    width: 100%;
    font-size: 14px;
  }

  &__drag-icon {
    line-height: 20px;
    font-size: 20px;
    height: 20px;
    width: 20px;
    color: $color-button-icon;
    cursor: move;
  }

  &__divider {
    margin: 0 36px;
    border-top-color: $color-border;
    border-top: 2px dashed $color-border;
  }
}


.cdk-drag-preview {
  box-sizing: border-box;
  background: $background-secondary;

  .column {
    border-radius: 12px;
    border: 2px solid $color-primary;
  }

  .column__divider {
    display: none;
  }
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.column:last-child {
  border: none;
}

.columns.cdk-drop-list-dragging .print-dialog__column-container:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

